Add Google Search Console verification meta tag

--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -2,4 +2,6 @@
 
 <!-- insert favicons. use https://realfavicongenerator.net/ -->
 
+<meta name="google-site-verification" content="TO9bcCBJZvapkOvVLF_OSBnhgotLk823fPnSkCPoQFg" />
+
 <!-- end custom head snippets -->
